<resources>
    <string name="app_name">Setel Mcommerce</string>
    <string name="error">Error</string>
    <string name="error_no_network_message">No internet connection</string>
    <string name="empty_message">No restaurant is found</string>
    <string name="open">Open</string>
    <string name="close">Closed</string>
    <string name="acc_name">Hello, Nguyen</string>
    <string name="welcome">Welcome back</string>
    <string name="about">About</string>
    <string name="about_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sed quis justo sed metus in ultricies nunc morbi neque mi.</string>
    <string name="opening_hours">Opening Hours</string>
</resources>
