<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        tools:context=".presentation.ui.shop.detail.ShopDetailFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgThumb"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_240sdp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/btnBack"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/padding_edge"
            android:layout_marginTop="@dimen/padding_edge"
            android:src="@drawable/selector_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/padding_edge_half"
            android:layout_marginTop="@dimen/_110sdp"
            app:cardBackgroundColor="@color/background"
            app:cardCornerRadius="@dimen/padding_edge_half"
            app:cardElevation="@dimen/padding_edge_half"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/padding_edge_half"
            app:layout_constraintBottom_toBottomOf="@id/imgThumb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgThumb">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_edge_half">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/app_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tvName"
                    android:maxLines="2"
                    android:text="@string/app_name"
                    android:textSize="@dimen/_10sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgStatus"
                    android:layout_width="@dimen/_8sdp"
                    android:layout_height="@dimen/_16sdp"
                    android:paddingVertical="@dimen/_4sdp"
                    android:layout_below="@id/tvDescription"
                    android:src="@drawable/ic_status"
                    />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_16sdp"
                    android:layout_marginStart="@dimen/padding_edge_half"
                    android:layout_below="@id/tvDescription"
                    android:layout_toEndOf="@id/imgStatus"
                    android:gravity="center_vertical"
                    android:includeFontPadding="false"
                    android:text="@string/open"
                    android:textSize="@dimen/_10sdp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_edge_half"
            android:layout_marginEnd="@dimen/padding_edge_half"
            android:paddingHorizontal="@dimen/padding_edge_half"
            android:text="@string/about"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardView" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvAboutContent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_edge_half"
            android:text="@string/about_content"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_10sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvAboutTitle"
            app:layout_constraintStart_toStartOf="@id/tvAboutTitle"
            app:layout_constraintTop_toBottomOf="@id/tvAboutTitle" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvOpenHours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/padding_edge_half"
            android:layout_marginTop="@dimen/padding_edge_half"
            android:text="@string/opening_hours"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/_12sdp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/tvAboutTitle"
            app:layout_constraintStart_toStartOf="@id/tvAboutTitle"
            app:layout_constraintTop_toBottomOf="@id/tvAboutContent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/openingHourRecycler"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/tvAboutTitle"
            app:layout_constraintStart_toStartOf="@id/tvAboutTitle"
            app:layout_constraintTop_toBottomOf="@id/tvOpenHours"
            tools:listitem="@layout/item_opening_hours" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>